# ChangeLog for dev-util/gnustep-back
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gnustep-back/ChangeLog,v 1.4 2002/12/13 10:56:49 blizzy Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gnustep-back-0.8.0 (03 Sep 2002)

  03 Sep 2002; Nick Hadaway <raker@gentoo.org> gnustep-back-0.8.0.ebuild,
  files/digest-gnustep-back-0.8.0 :
  Version bump.

*gnustep-back-0.7.9 (19 Jul 2002)

  19 Jul 2002; Nick Hadaway <raker@gentoo.org>
  gnustep-back-0.7.9.ebuild, ChangeLog, files/digest-gnustep-back-0.7.9 :
  Initial ebuild.