@@ -1,0 +1,19 @@
+*** Headers/xlib/XftFontInfo.h.orig	Sun Feb  2 23:39:29 2003
+--- Headers/xlib/XftFontInfo.h	Sun Feb  2 23:39:38 2003
+***************
+*** 29,35 ****
+  // Include this before we include any objC defines, otherwise id is defined
+  #include <X11/Xlib.h>
+  #define id xwindowsid
+! #include <X11/Xft/Xft.h>
+  #undef id
+  
+  #include <AppKit/GSFontInfo.h>
+--- 29,35 ----
+  // Include this before we include any objC defines, otherwise id is defined
+  #include <X11/Xlib.h>
+  #define id xwindowsid
+! #include <X11/Xft1/Xft.h>
+  #undef id
+  
+  #include <AppKit/GSFontInfo.h>
