@@ -1,6 +1,14 @@
 # ChangeLog for dev-util/gnustep-back
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gnustep-back/ChangeLog,v 1.4 2002/12/13 10:56:49 blizzy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gnustep-back/ChangeLog,v 1.5 2003/02/04 19:07:02 raker Exp $
+
+*gnustep-back-0.8.3 (04 Feb 2003)
+
+  04 Feb 2003; Nick Hadaway <raker@gentoo.org> gnustep-back-0.8.3.ebuild,
+  files/digest-gnustep-back-0.8.3, files/gnustep-back-0.8.3.xft1.patch :
+  Make sure /root/GNUstep doesn't exist before compiling otherwise
+  you'll get lots of warnings.  Version bump.  Marked unstable.
+
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
